[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assests/Font/PixgamerRegular-OVD6A.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assests/UI/player userInterface/full.png" type="Texture" id=2]
[ext_resource path="res://Assests/Actors/Player/Crow_profile.png" type="Texture" id=3]
[ext_resource path="res://Assests/UI/player userInterface/empty.png" type="Texture" id=4]
[ext_resource path="res://Assests/UI/player userInterface/wave_empty.png" type="Texture" id=5]
[ext_resource path="res://Assests/UI/player userInterface/currency.png" type="Texture" id=6]
[ext_resource path="res://Assests/UI/player userInterface/waveFull.png" type="Texture" id=7]
[ext_resource path="res://World/playerHUD.gd" type="Script" id=8]
[ext_resource path="res://Assests/UI/player userInterface/gas_empty.png" type="Texture" id=9]
[ext_resource path="res://Assests/UI/player userInterface/gas_full.png" type="Texture" id=10]
[ext_resource path="res://Assests/UI/player_userInterface.png" type="Texture" id=11]
[ext_resource path="res://Assests/UI/user_profile.png" type="Texture" id=12]
[ext_resource path="res://Actors/Enemies/Setting_UI.tres" type="DynamicFont" id=13]
[ext_resource path="res://World/Wave.gd" type="Script" id=14]
[ext_resource path="res://Assests/UI/Speed.png" type="Texture" id=15]
[ext_resource path="res://Assests/UI/health_icon.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -2.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "shake"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, -2.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Wave/Wave_Round:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wave/Wave_Round:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "wave_info"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Wave/Wave_Round:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wave/Wave_Round:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.921569, 0, 0, 1 ), Color( 1, 1, 1, 0.372549 ), Color( 0.843137, 0, 0, 0.498039 ), Color( 1, 1, 1, 0.372549 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 128, 128 )
margin_left = 12.0
margin_right = 12.0
margin_top = 12.0
margin_bottom = 12.0
modulate_color = Color( 0.352941, 0.286275, 0.207843, 0.482353 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 220, 52 )
modulate_color = Color( 0.352941, 0.286275, 0.207843, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )
wave_progress = NodePath("Wave")
Health_bar = NodePath("UserInformation/PlayerInformation/Health")
fuel_bar = NodePath("UserInformation/Fuel_progress")
currency_text = NodePath("UserInformation/PlayerInformation/Coins_text/Coins")
Rounds = NodePath("Wave/Wave_Round")
enemy_count = NodePath("Enemy Count")
player_picture = NodePath("UserInformation/PlayerInformation/Upper_hud/picture")

[node name="Enemy Count" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = 158.0
margin_right = -219.0
margin_bottom = 174.0
rect_rotation = -2.0
rect_pivot_offset = Vector2( 46, 8 )
custom_fonts/font = SubResource( 4 )
text = "ENEMY COUNT: %"

[node name="count" type="AnimationPlayer" parent="Enemy Count"]
anims/RESET = SubResource( 9 )
anims/shake = SubResource( 10 )

[node name="Wave" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -177.0
margin_right = 32.0
margin_bottom = -161.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 32, 0 )
max_value = 0.0
step = 0.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 7 )
script = ExtResource( 14 )

[node name="wave_anim" type="AnimationPlayer" parent="Wave"]
root_node = NodePath("../..")
anims/RESET = SubResource( 7 )
anims/wave_info = SubResource( 8 )

[node name="Wave_Round" type="Label" parent="Wave"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = 143.5
margin_right = -110.0
margin_bottom = 159.5
custom_fonts/font = SubResource( 4 )
text = "WAVE: %"

[node name="UserInformation" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerInformation" type="Panel" parent="UserInformation"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.0
margin_top = -64.0
margin_right = 122.0
margin_bottom = -1.0
custom_styles/panel = SubResource( 5 )

[node name="Upper_hud" type="Panel" parent="UserInformation/PlayerInformation"]
margin_left = -1.0
margin_top = -10.0
margin_right = 244.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 98, 0 )
custom_styles/panel = SubResource( 6 )

[node name="picture" type="TextureRect" parent="UserInformation/PlayerInformation/Upper_hud"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.0
margin_top = 2.0
margin_right = -97.0
margin_bottom = -3.0
texture = ExtResource( 3 )
expand = true

[node name="Speed" type="Panel" parent="UserInformation/PlayerInformation"]
margin_left = 151.0
margin_top = -6.0
margin_right = 242.0
margin_bottom = 25.0
custom_styles/panel = SubResource( 11 )

[node name="speed_stat" type="Label" parent="UserInformation/PlayerInformation/Speed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.5
margin_top = -30.0
margin_right = 42.5
margin_bottom = -8.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 13 )
text = "sdfasd"

[node name="Sprite" type="Sprite" parent="UserInformation/PlayerInformation/Speed"]
position = Vector2( 7, 7 )
texture = ExtResource( 15 )

[node name="Health_stat" type="Label" parent="UserInformation/PlayerInformation/Speed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.5
margin_top = -14.0
margin_right = 42.5
margin_bottom = 8.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 13 )
text = "sdfasd"

[node name="Sprite2" type="Sprite" parent="UserInformation/PlayerInformation/Speed"]
position = Vector2( 7, 23 )
texture = ExtResource( 16 )

[node name="Health" type="TextureProgress" parent="UserInformation/PlayerInformation"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -35.0
margin_right = -44.0
margin_bottom = -12.0
rect_scale = Vector2( 2, 1.5 )
max_value = 0.0
step = 0.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="Coins_text" type="TextureRect" parent="UserInformation/PlayerInformation"]
margin_left = 2.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 22.0
texture = ExtResource( 6 )
expand = true

[node name="Coins" type="Label" parent="UserInformation/PlayerInformation/Coins_text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 13 )
text = "69"

[node name="Fuel_progress" type="TextureProgress" parent="UserInformation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 122.0
margin_top = 109.0
margin_right = 150.0
margin_bottom = 177.0
step = 0.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 3
nine_patch_stretch = true
